# BABEL

./: CMakeLists.txt  README.md  conanfile.txt
client/inc/: Audio.hpp  CSocket.hpp  Encoder.hpp  IAudio.hpp  IEncoder.hpp  client.hpp  main.hpp  mainwindow.hpp
client/src/: Audio.cpp  Encoder.cpp  Socket.cpp  client.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mainwindowNetwork.cpp
server/db/: s_babel
server/inc/: ClientInfo.hpp  CoHandler.hpp  DBManager.hpp  Includer.hpp  Server.hpp
server/src/: ClientInfo.cpp  CoHandler.cpp  DBManager.cpp  Server.cpp  main.cpp
